<resources>
    <string name="app_name">Medisafe</string>
    <string name="title_country_detail">Country Details</string>
    <string name="flag">Flag:</string>
    <string name="etc">…</string>
    <string name="country">Country:</string>
    <string name="gini">Gini:</string>
    <string name="nativeName">Native name:</string>
    <string name="population">Population:</string>
    <string name="area">Area:</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
</resources>
