<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.paringer.medisafe.view.CountryDetailFragment"
    >

    <data>
        <import type="com.paringer.medisafe.model.rest.data.CountryItem"/>

        <variable
            name="data"
            type="com.paringer.medisafe.model.rest.data.CountryItem"/>

    </data>

    <LinearLayout
        android:id="@+id/country_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/none"
        android:padding="@dimen/none"
        android:orientation="vertical"
        android:isScrollContainer="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            >

            <TextView
                android:id="@+id/textName"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@string/country"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/detail"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@{data.name}"
                android:textIsSelectable="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            >

            <TextView
                android:id="@+id/textNativeName"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@string/nativeName"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/nativeName"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@{data.nativeName}"
                android:textIsSelectable="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            >

            <TextView
                android:id="@+id/textArea"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@string/area"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/area"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@{``+data.area}"
                android:textIsSelectable="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            >

            <TextView
                android:id="@+id/textPopulation"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@string/population"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/population"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@{``+data.population}"
                android:textIsSelectable="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            >

            <TextView
                android:id="@+id/textGini"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@string/gini"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/gini"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:hint="@string/etc"
                android:text="@{``+data.gini}"
                android:textIsSelectable="true"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textFlag"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/etc"
            android:text="@string/flag"
            android:textIsSelectable="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/none"
            android:padding="@dimen/none"
            android:orientation="horizontal"
            >
        <com.caverock.androidsvg.SVGImageView
            android:id="@+id/id_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/flag_width_max"
            android:maxHeight="@dimen/flag_height_max"
            android:layout_margin="@dimen/small_margin"
            android:padding="@dimen/none"
            android:contentDescription="@string/flag"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_dialog_dialer"
            android:uri="@{data.flag}"
            />
    </LinearLayout>

    </LinearLayout>
</layout>
